# docsamajh-ai

./: .env  .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  HACKATHON_SUMMARY.md  OAUTH_FIX.md  PRESENTATION_GUIDE.md  QUICKSTART.md  README.md  docsamajh_users.db  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/docsamajh/: __init__.py  app.py  auth.py
